// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BpkHorizontalNav should render correctly 1`] = `
<DocumentFragment>
  <div
    class="bpk-horizontal-nav bpk-horizontal-nav--show-default-underline"
  >
    <div
      class="bpk-mobile-scroll-container"
      style="height: auto;"
    >
      <div
        class="bpk-mobile-scroll-container__scroller"
        data-backpack-ds-component="MobileScrollContainer"
      >
        <nav
          class="bpk-mobile-scroll-container__inner"
        >
          <div
            class="bpk-horizontal-nav__list"
            role="tablist"
          >
            My nav content.
          </div>
        </nav>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkHorizontalNav should render correctly with "ariaLabel" prop 1`] = `
<DocumentFragment>
  <div
    class="bpk-horizontal-nav bpk-horizontal-nav--show-default-underline"
  >
    <div
      class="bpk-mobile-scroll-container"
      style="height: auto;"
    >
      <div
        class="bpk-mobile-scroll-container__scroller"
        data-backpack-ds-component="MobileScrollContainer"
      >
        <nav
          aria-label="nav content"
          class="bpk-mobile-scroll-container__inner"
        >
          <div
            class="bpk-horizontal-nav__list"
            role="tablist"
          >
            My nav content.
          </div>
        </nav>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkHorizontalNav should render correctly with "ariaLabel" prop set to null 1`] = `
<DocumentFragment>
  <div
    class="bpk-horizontal-nav bpk-horizontal-nav--show-default-underline"
  >
    <div
      class="bpk-mobile-scroll-container"
      style="height: auto;"
    >
      <div
        class="bpk-mobile-scroll-container__scroller"
        data-backpack-ds-component="MobileScrollContainer"
      >
        <nav
          class="bpk-mobile-scroll-container__inner"
        >
          <div
            class="bpk-horizontal-nav__list"
            role="tablist"
          >
            My nav content.
          </div>
        </nav>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkHorizontalNav should render correctly with "showUnderline" set to false 1`] = `
<DocumentFragment>
  <div
    class="bpk-horizontal-nav"
  >
    <div
      class="bpk-mobile-scroll-container"
      style="height: auto;"
    >
      <div
        class="bpk-mobile-scroll-container__scroller"
        data-backpack-ds-component="MobileScrollContainer"
      >
        <nav
          class="bpk-mobile-scroll-container__inner"
        >
          <div
            class="bpk-horizontal-nav__list"
            role="tablist"
          >
            My nav content.
          </div>
        </nav>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkHorizontalNav should render correctly with "type" prop 1`] = `
<DocumentFragment>
  <div
    class="bpk-horizontal-nav bpk-horizontal-nav--show-light-underline"
  >
    <div
      class="bpk-mobile-scroll-container"
      style="height: auto;"
    >
      <div
        class="bpk-mobile-scroll-container__scroller"
        data-backpack-ds-component="MobileScrollContainer"
      >
        <nav
          class="bpk-mobile-scroll-container__inner"
        >
          <div
            class="bpk-horizontal-nav__list"
            role="tablist"
          >
            <div>
              <li
                type="light"
              >
                One
              </li>
            </div>
            <div>
              <li
                type="light"
              >
                Two
              </li>
            </div>
            <div>
              <li
                type="light"
              >
                Three
              </li>
            </div>
          </div>
        </nav>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkHorizontalNav should render correctly with arbitrary props 1`] = `
<DocumentFragment>
  <div
    class="bpk-horizontal-nav bpk-horizontal-nav--show-default-underline"
  >
    <div
      class="bpk-mobile-scroll-container"
      data-arbitrary-1="arbirary-value-1"
      data-arbitrary-2="arbirary-value-2"
      style="height: auto;"
    >
      <div
        class="bpk-mobile-scroll-container__scroller"
        data-backpack-ds-component="MobileScrollContainer"
      >
        <nav
          aria-label="nav content"
          class="bpk-mobile-scroll-container__inner"
        >
          <div
            class="bpk-horizontal-nav__list"
            role="tablist"
          >
            My nav content.
          </div>
        </nav>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkHorizontalNav should render correctly with custom "className" prop 1`] = `
<DocumentFragment>
  <div
    class="bpk-horizontal-nav bpk-horizontal-nav--show-default-underline my-custom-class-name"
  >
    <div
      class="bpk-mobile-scroll-container"
      style="height: auto;"
    >
      <div
        class="bpk-mobile-scroll-container__scroller"
        data-backpack-ds-component="MobileScrollContainer"
      >
        <nav
          class="bpk-mobile-scroll-container__inner"
        >
          <div
            class="bpk-horizontal-nav__list"
            role="tablist"
          >
            My nav content.
          </div>
        </nav>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkHorizontalNav should render correctly with custom "leadingScrollIndicatorClassName" prop 1`] = `
<DocumentFragment>
  <div
    class="bpk-horizontal-nav bpk-horizontal-nav--show-default-underline"
  >
    <div
      class="bpk-mobile-scroll-container"
      style="height: auto;"
    >
      <div
        class="bpk-mobile-scroll-container__scroller"
        data-backpack-ds-component="MobileScrollContainer"
      >
        <nav
          class="bpk-mobile-scroll-container__inner"
        >
          <div
            class="bpk-horizontal-nav__list"
            role="tablist"
          >
            My nav content.
          </div>
        </nav>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkHorizontalNav should render correctly with custom "trailingScrollIndicatorClassName" prop 1`] = `
<DocumentFragment>
  <div
    class="bpk-horizontal-nav bpk-horizontal-nav--show-default-underline"
  >
    <div
      class="bpk-mobile-scroll-container"
      style="height: auto;"
    >
      <div
        class="bpk-mobile-scroll-container__scroller"
        data-backpack-ds-component="MobileScrollContainer"
      >
        <nav
          class="bpk-mobile-scroll-container__inner"
        >
          <div
            class="bpk-horizontal-nav__list"
            role="tablist"
          >
            My nav content.
          </div>
        </nav>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
